@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.260 (gritter) 10/28/04
+.\"     Sccsid: @(#)nail.1	2.261 (gritter) 10/30/04
 .\"
-.TH NAIL 1 "10/28/04" "nail 11.14" "User Commands"
+.TH NAIL 1 "10/30/04" "nail 11.14" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -1799,6 +1799,11 @@ A number without a prefix specifies an
 absolute window number,
 and a `$' lets \fInail\fR scroll
 to the last window of messages.
+.B Z
+Similar to
+.IR z ,
+but scrolls to the next or previous window
+that contains a new message.
 .SS "Tilde escapes"
 Here is a summary of the tilde escapes,
 which are used when composing
