@@ -1,4 +1,7 @@
 [11.14] released ...
+* A 'Z' command was introduced. It is similar to the 'z' command, but scrolls
+  only to header groups that contain at least one new message. This is useful
+  for reading large mailing lists.
 * In version 11.12, fcntl() read locking was erroneusly introduced for files
   other than system mailboxes too. It is now disabled for such files again.
 
